# Image-Processing-Program

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  UI.c  UI.h  buttonActions.c  buttonActions.h  function_buttons.c  function_buttons.h  functionalButtons.c  functionalButtons.h  imageFunctions.c  imageFunctions.h  imageModifications.c  imageModifications.h  image_functions.c  image_functions.h  image_modifications.c  image_modifications.h  main.c  mainWindow.c  main_window.c  style.css
stb/: stb_image.h  stb_image_write.h
